src/objects/US_Embargo_Countries__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The US Embargo of this Country is currently ACTIVE</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Embargo_Country_ISO_Code__c</fullName>
        <description>2 digit ISO Country Code</description>
        <label>Embargo Country ISO Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Embargo_Country_ISO_Name__c</fullName>
        <description>ISO Name of Country currently under Embargo restrictions with the US Government</description>
        <label>Embargo Country ISO Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Embargo Expiration Date</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>List of all Countries currently under Embargo restrictions with the US Government.</description>
    <label>US Embargo Countries</label>
</CustomObject>